Small fix for focus state of search field on mobile

--- a/dev/sass/base-element-styles/modules/objects/_header.scss
+++ b/dev/sass/base-element-styles/modules/objects/_header.scss
@@ -263,6 +263,9 @@ header.ug.global{
               color: $white;
               height: 4rem;
               width: 200px;
+              &:focus{
+                border-color: $white;
+              }
             }
 
           }
